paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/rel_op_c6a/sample_003/target.compile.log
error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/rel_op_c6a/sample_003/target.rs:6:25
  |
6 |     if !((a < b) as i32 < c) {
  |                         ^ -- interpreted as generic arguments
  |                         |
  |                         not interpreted as comparison
  |
help: try comparing the cast value
  |
6 |     if !(((a < b) as i32) < c) {
  |          +              +

error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/rel_op_c6a/sample_003/target.rs:18:25
   |
18 |     if !((a < b) as i32 < c) {
   |                         ^ -- interpreted as generic arguments
   |                         |
   |                         not interpreted as comparison
   |
help: try comparing the cast value
   |
18 |     if !(((a < b) as i32) < c) {
   |          +              +

error[E0277]: `main` has invalid return type `i32`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/rel_op_c6a/sample_003/target.rs:1:14
  |
1 | fn main() -> i32 {
  |              ^^^ `main` can only return types that implement `Termination`
  |
  = help: consider using `()`, or a `Result`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.